--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_base
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: ">=2.19.4 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,27 +31,28 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
   hydrated_bloc: ^9.1.0
   bloc_test: ^9.1.1
   bloc_concurrency: ^0.2.1
   freezed_annotation: ^2.2.0
-  intl: ^0.18.0
-  auto_route: ^5.0.4
+  auto_route: ^6.0.0+1
   permission_handler: ^10.2.0
   animated_text_kit: ^4.2.2
   animations: ^2.0.7
   shimmer: ^2.0.0
   flutter_blurhash: ^0.7.0
-  dio: ^5.0.1
-  logger: ^1.2.2
-  flutter_uploader: ^1.2.1
+  dio: ^5.0.3
+  logger: ^1.3.0
   dotenv: ^4.1.0
+  flutter_dotenv: ^5.0.2
+  equatable: ^2.0.5
+  get_it: ^7.2.0
+  easy_localization: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -62,25 +63,24 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
   build_runner: ^2.3.3
   freezed: ^2.3.2
+  json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
