--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,20 @@ scripts:
   # in the command line: "rps" - that's all!
   gen: "fvm flutter pub run easy_localization:generate -S assets/translations -f keys -o locale_keys.g.dart && fvm flutter pub run build_runner watch -d"
   # run generate localizations
-  localization: "fvm flutter pub run easy_localization:generate -S assets/translations -f keys -o locale_keys.g.dart"
-  # Clean -> pub get -> generate localization -> run build_runner
-  get: "fvm flutter clean && fvm flutter pub get && fvm flutter pub run easy_localization:generate -S assets/translations -f keys -o locale_keys.g.dart && fvm flutter pub run build_runner watch -d"
+  localization: "fvm flutter pub run easy_localization:generate -S lib/app/locale -f keys -o locale_keys.g.dart"
+  # pub get -> generate localization -> run build_runner
+  get: "fvm flutter pub get && fvm flutter pub run easy_localization:generate -S lib/app/locale/translations -f keys -o locale_keys.g.dart && fvm flutter pub run build_runner watch -d"
   # format after pushing
   format: "dart format"
+  # pub clean -> pub get -> generate localization -> run build_runner
+  refresh: "fvm flutter clean && fvm flutter pub get && fvm flutter pub run easy_localization:generate -S lib/app/locale/translations -f keys -o locale_keys.g.dart && fvm flutter pub run build_runner watch -d"
+
+# Config flutter gen
+flutter_gen:
+  output: lib/generated/
+  line_length: 80
+  integrations:
+    flutter_sgv: true
 
 dependencies:
   flutter:
@@ -27,7 +36,6 @@ dependencies:
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
   hydrated_bloc: ^9.1.0
-  bloc_test: ^9.1.1
   bloc_concurrency: ^0.2.1
   freezed_annotation: ^2.2.0
   auto_route: ^6.0.0+1
@@ -43,6 +51,9 @@ dependencies:
   equatable: ^2.0.5
   get_it: ^7.2.0
   easy_localization: ^3.0.1
+  flutter_exif_rotation: ^0.5.1
+
+  flutter_svg: ^2.0.4
 
 dev_dependencies:
   flutter_test:
@@ -51,11 +62,15 @@ dev_dependencies:
   build_runner: ^2.3.3
   freezed: ^2.3.2
   json_serializable: ^6.6.1
-
+  flutter_gen_runner: ^5.2.0
+  bloc_test: ^9.1.1
+  auto_route_generator: ^6.0.0
 flutter:
   uses-material-design: true
   assets:
-    - assets/translations/
+    - assets/icons/
+    - assets/images/
+    - assets/locale/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list s            hould have a
