Add config build runner  repository

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/locale/
+    - assets/env/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list s            hould have a
