--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_exif_rotation: ^0.5.1
 
   flutter_svg: ^2.0.4
+  injectable: ^2.1.1
 
 dev_dependencies:
   flutter_test:
