--- a/build.yaml
+++ b/build.yaml
@@ -1,6 +1,9 @@
 targets:
   $default:
     builders:
+      easy_localization|easeLocalization:
+        enabled: true
+
       auto_route_generator|autoRouteGenerator:
         enabled: true
         generate_for:
