--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
 
   flutter_svg: ^2.0.4
   injectable: ^2.1.1
+  image: ^4.0.15
+  lottie: ^2.3.1
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +76,7 @@ flutter:
     - assets/images/
     - assets/locale/
     - assets/env/
+    - assets/gif/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
