--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   image: ^4.0.15
   lottie: ^2.3.1
   transparent_image: ^2.0.1
+  retrofit: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,8 @@ dev_dependencies:
   flutter_gen_runner: ^5.2.0
   bloc_test: ^9.1.1
   auto_route_generator: ^6.0.0
+  retrofit_generator: '>=5.0.0 <6.0.0'
+  
 flutter:
   uses-material-design: true
   assets:
