--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   hive_flutter: ^1.1.0
   package_info: ^2.0.2
   package_info_plus: ^3.1.0
+  awesome_dio_interceptor: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -90,12 +91,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Clash Grotesk
+      fonts:
+        - asset: assets/fonts/ClashGrotesk-Regular.otf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
