--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   package_info: ^2.0.2
   package_info_plus: ^3.1.0
   awesome_dio_interceptor: ^1.0.0
+  built_value: ^8.6.3
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +77,7 @@ dev_dependencies:
   bloc_test: ^9.1.1
   auto_route_generator: ^6.0.0
   retrofit_generator: '>=5.0.0 <6.0.0'
+  built_value_generator: ^8.6.3
   
 flutter:
   uses-material-design: true
