--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   shimmer: ^2.0.0
   flutter_blurhash: ^0.7.0
   dio: ^5.0.3
-  logger: ^1.3.0
+  logger: ^2.0.2+1 
   dotenv: ^4.1.0
   flutter_dotenv: ^5.0.2
   equatable: ^2.0.5
@@ -65,6 +65,8 @@ dependencies:
   package_info_plus: ^3.1.0
   awesome_dio_interceptor: ^1.0.0
   built_value: ^8.6.3
+  vector_math: ^2.1.4
+  talker_bloc_logger: ^2.2.0
 
 dev_dependencies:
   flutter_test:
