--- a/assets/env/stag.env
+++ b/assets/env/stag.env
@@ -1,2 +1,3 @@
-BASE_URL='https://pokeapi.co/api'
-VERSION_CODE = '/v2/'
+BASE_URL='http://api.weatherapi.com'
+VERSION_CODE = '/v1/'
+API_KEY = '8a96dc0235934b80bd223920231712'
