--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: "none"
 version: 1.0.0
 
 environment:
-  sdk: ">=2.19.4 <4.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 #SCRIPT
 scripts:
@@ -32,54 +32,53 @@ flutter_gen:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.5
-  bloc: ^8.1.1
-  flutter_bloc: ^8.1.2
-  hydrated_bloc: ^8.0.0
-  bloc_concurrency: ^0.2.1
-  freezed_annotation: ^2.2.0
-  auto_route: ^6.0.0+1
-  permission_handler: ^10.2.0
-  animated_text_kit: ^4.2.2
-  animations: ^2.0.7
-  shimmer: ^2.0.0
-  flutter_blurhash: ^0.7.0
-  dio: ^5.0.3
-  logger: ^2.0.2+1 
-  dotenv: ^4.1.0
-  flutter_dotenv: ^5.0.2
-  equatable: ^2.0.5
-  get_it: ^7.2.0
-  easy_localization: ^3.0.1
-  flutter_exif_rotation: ^0.5.1
+  cupertino_icons: ^1.0.6
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
 
-  flutter_svg: ^2.0.4
-  injectable: ^2.1.1
-  image: ^4.0.15
-  lottie: ^2.3.1
+  bloc_concurrency: ^0.2.3
+  freezed_annotation: ^2.4.1
+  auto_route: ^7.8.4
+  permission_handler: ^11.1.0
+  animated_text_kit: ^4.2.2
+  animations: ^2.0.10
+  shimmer: ^3.0.0
+  flutter_blurhash: ^0.8.2
+  dio: ^5.4.0
+  logger: ^2.0.2+1 
+  dotenv: ^4.2.0
+  flutter_dotenv: ^5.1.0
+  equatable: ^2.0.5
+  get_it: ^7.6.4
+  easy_localization: ^3.0.3
+
+  flutter_svg: ^2.0.9
+  injectable: ^2.3.2
+  image: ^4.1.3
+  lottie: ^2.7.0
   transparent_image: ^2.0.1
-  retrofit: ^4.0.1
+  retrofit: ^4.0.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   package_info: ^2.0.2
-  package_info_plus: ^3.1.0
+  package_info_plus: ^3.1.2
   awesome_dio_interceptor: ^1.0.0
-  built_value: ^8.6.3
   vector_math: ^2.1.4
-  talker_bloc_logger: ^2.2.0
+  talker_bloc_logger: ^2.4.0
+  rps: ^0.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
-  build_runner: ^2.3.3
-  freezed: ^2.3.2
-  json_serializable: ^6.6.1
-  flutter_gen_runner: ^5.2.0
-  bloc_test: ^9.1.1
-  auto_route_generator: ^6.0.0
-  retrofit_generator: '>=5.0.0 <6.0.0'
-  built_value_generator: ^8.6.3
+  flutter_lints: ^3.0.1
+  build_runner: ^2.4.7
+  freezed: ^2.4.6
+  json_serializable: ^6.7.1
+  flutter_gen_runner: ^5.3.2
+  bloc_test: ^9.1.5
+  auto_route_generator: ^7.3.2
+  retrofit_generator: '>=8.0.6'
+
   
 flutter:
   uses-material-design: true
