--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,14 @@
 {
     "cSpell.words": [
+        "blurhash",
+        "combinators",
+        "cupertino",
         "dotenv",
-        "Grotesk"
+        "Grotesk",
+        "ints",
+        "pubspec",
+        "redeclares",
+        "todos",
+        "unawaited"
     ]
 }
