--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,9 @@ dependencies:
   vector_math: ^2.1.4
   talker_bloc_logger: ^2.4.0
   rps: ^0.7.0
+  hydrated_bloc: ^9.1.3
+  replay_bloc: ^0.2.5
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
