--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,8 +58,6 @@ dependencies:
   lottie: ^2.7.0
   transparent_image: ^2.0.1
   retrofit: ^4.0.3
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
   package_info: ^2.0.2
   package_info_plus: ^3.1.2
   awesome_dio_interceptor: ^1.0.0
@@ -69,6 +67,7 @@ dependencies:
   hydrated_bloc: ^9.1.3
   replay_bloc: ^0.2.5
   path_provider: ^2.1.2
+  supabase_flutter: ^2.2.0
 
 dev_dependencies:
   flutter_test:
