--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 #SCRIPT
 scripts:
+  # RUN THIS SCRIPT:  dart pub global activate rps --version 0.8.0
   # run is a default script. To use it, simply type
   # in the command line: "rps" - that's all!
   gen: "fvm flutter pub run easy_localization:generate -S assets/locale -f keys -o locale_keys.g.dart && fvm flutter pub run build_runner watch -d"
@@ -67,7 +68,11 @@ dependencies:
   hydrated_bloc: ^9.1.3
   replay_bloc: ^0.2.5
   path_provider: ^2.1.2
-  supabase_flutter: ^2.2.0
+  rive: ^0.13.7
+  calendar_view: ^1.2.0
+  syncfusion_flutter_calendar: ^26.1.35
+  dio_smart_retry: ^6.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -87,9 +92,11 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/fonts/
     - assets/locale/
     - assets/env/
     - assets/gif/
+    - assets/riv/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
