--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   calendar_view: ^1.2.0
   syncfusion_flutter_calendar: ^26.1.35
   dio_smart_retry: ^6.0.0
+  dartz: ^0.10.1
 
 
 dev_dependencies:
