--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.flutterBase</string>
+	<string>ftel.isc.mobinet</string>
 	<key>PROJECT_ID</key>
 	<string>mobinet-integrate</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:166891242416:ios:874c46dbaa77545e5c4c75</string>
+	<string>1:166891242416:ios:c3302566a97b78c25c4c75</string>
 </dict>
 </plist>
