--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ scripts:
   # RUN THIS SCRIPT:  dart pub global activate rps --version 0.8.0
   # run is a default script. To use it, simply type
   # in the command line: "rps" - that's all!
-  gen: "fvm flutter pub run easy_localization:generate -S assets/locale -f keys -o locale_keys.g.dart && fvm flutter pub run build_runner build -d"
+  gen: "fvm flutter pub run easy_localization:generate -S assets/locale -f keys -o locale_keys.g.dart && fvm flutter pub run build_runner watch -d"
   # run generate localizations
   localization: "fvm flutter pub run easy_localization:generate -S assets/locale -f keys -o locale_keys.g.dart"
   # pub get -> generate localization -> run build_runner
