--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   auto_route: ^7.8.4
   permission_handler: ^11.3.1
   animated_text_kit: ^4.2.2
-  animations: ^2.0.10
+  animations: ^2.0.11
   shimmer: ^3.0.0
   flutter_blurhash: ^0.8.2
   dio: ^5.4.0
@@ -73,7 +73,7 @@ dependencies:
   syncfusion_flutter_calendar: ^26.1.35
   dio_smart_retry: ^6.0.0
   dartz: ^0.10.1
-  firebase_core: ^3.1.0
+  # firebase_core: ^3.1.0
 
 
 dev_dependencies:
@@ -106,9 +106,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Clash Grotesk
+    - family: Fontspring
       fonts:
-        - asset: assets/fonts/ClashGrotesk-Regular.otf
+        - asset: assets/fonts/Fontspring.otf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
