--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   cupertino_icons: ^1.0.6
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
-
   bloc_concurrency: ^0.2.3
   freezed_annotation: ^2.4.1
   auto_route: ^7.8.4
@@ -52,28 +51,25 @@ dependencies:
   equatable: ^2.0.5
   get_it: ^7.6.4
   easy_localization: ^3.0.3
-
   flutter_svg: ^2.0.9
   injectable: ^2.3.2
   image: ^4.1.3
-  lottie: ^2.7.0
-  transparent_image: ^2.0.1
   retrofit: ^4.0.3
   package_info: ^2.0.2
   package_info_plus: ^3.1.2
   awesome_dio_interceptor: ^1.0.0
   vector_math: ^2.1.4
   talker_bloc_logger: ^2.4.0
-  rps: ^0.7.0
   hydrated_bloc: ^9.1.3
   replay_bloc: ^0.2.5
   path_provider: ^2.1.2
   rive: ^0.13.7
-
   syncfusion_flutter_calendar: ^26.1.35
   dio_smart_retry: ^6.0.0
+  pretty_dio_logger: ^1.3.1
   dartz: ^0.10.1
-  # firebase_core: ^3.1.0
+  objectbox: ^4.0.1
+  objectbox_flutter_libs: ^4.0.1
 
 
 dev_dependencies:
@@ -87,6 +83,7 @@ dev_dependencies:
   bloc_test: ^9.1.5
   auto_route_generator: ^7.3.2
   retrofit_generator: '>=8.0.6'
+  objectbox_generator: ^4.0.1
 
   
 flutter:
